--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -24,5 +24,6 @@ jobs:
           node-version: ${{ matrix.node }}
     - run: mix deps.get
     - run: mix compile
+    - run: yarn install
     - name: Run Jest
       uses: stefanoeb/jest-action@1.0.2
