ci(test): run jest directly

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -26,4 +26,5 @@ jobs:
     - run: mix compile
     - run: yarn install
     - name: Run Jest
-      uses: stefanoeb/jest-action@1.0.2
+      run: |
+        yarn jest
