--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -9,9 +9,9 @@ jobs:
     name: OTP ${{matrix.otp}} / Elixir ${{matrix.elixir}}
     strategy:
       matrix:
-        otp: [21.3, 22.2]
+        otp: [22.2]
         elixir: [1.8.2, 1.9.4]
-        node: ['10', '8']
+        node: ['10']
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-elixir@v1
