--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         otp: [22.2]
-        elixir: [1.8.2, 1.9.4]
+        elixir: [1.7.4, 1.8.2, 1.9.4, 1.10.2]
         node: ['10']
     steps:
     # checkout
