ci(lint): check if elixir code base is formatted

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -24,6 +24,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
           node-version: ${{ matrix.node }}
+    # lint
+    - name: lint
+      run: |
+        mix format --check-formatted
     # restore caches
     - uses: actions/cache@v1
       id: mix-cache 
