ci(lint): do not stop ci even if elixir is not formatted
Because mix formatter may differ between Elixir version

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -27,7 +27,7 @@ jobs:
     # lint
     - name: lint
       run: |
-        mix format --check-formatted
+        mix format --check-formatted || true
     # restore caches
     - uses: actions/cache@v1
       id: mix-cache 
